fix(Toggle): fix overflow issue in Safari (#1411)

--- a/packages/retail-ui/components/Toggle/Toggle.less
+++ b/packages/retail-ui/components/Toggle/Toggle.less
@@ -75,6 +75,8 @@
     border-radius: @containerHeight / 2;
     border: 1px solid @toggle-border-color;
     overflow: hidden;
+    -webkit-transform: translateZ(0); /* fixes overflow issue in Safari */
+    -webkit-mask-image: -webkit-radial-gradient(white, black); /* https://bugs.webkit.org/show_bug.cgi?id=98538 */
 
     .isDisabled & {
       background: @bg-disabled;
